--- a/labs/Lab5.ipynb
+++ b/labs/Lab5.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "id": "681a95mZnOSa"
    },
@@ -100,7 +100,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Время построения: --- 932 ms ---\n"
+      "Время построения: --- 7 ms ---\n"
      ]
     }
    ],
@@ -137,7 +137,7 @@
     "        t.left(60)\n",
     "        t.fd(ln)\n",
     "\n",
-    "deep = 4            #Задание глубины рекурсии (от 1 до 5)\n",
+    "deep = 0            #Задание глубины рекурсии (от 0 до 4)\n",
     "deep - deep - 1\n",
     "if deep == 0:\n",
     "    deep = 300      #300+\n",
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,31 +198,13 @@
     "        self.t.setpos(start_pos)    \n",
     "        self.t.seth(start_angle)    \n",
     "        self.t.down()\n",
-    "        stack = list()\n",
     "        for move in self.state:\n",
     "            if move == 'F':\n",
     "                self.t.forward(self.length)\n",
-    "            elif move == 'S':\n",
-    "                self.t.up()\n",
-    "                self.t.forward(self.length)\n",
-    "                self.t.down()\n",
     "            elif move == '+':\n",
     "                self.t.left(self.angle)\n",
     "            elif move == '-':\n",
     "                self.t.right(self.angle)  \n",
-    "            elif move == '[':\n",
-    "                stack.append(t.pos())\n",
-    "                stack.append(t.heading())\n",
-    "                self.t.left(self.angle)\n",
-    "            elif move == ']':\n",
-    "                t.up()\n",
-    "                t.setheading(stack.pop())\n",
-    "                t.setpos(stack.pop())\n",
-    "                t.down()\n",
-    "                self.t.right(self.angle)\n",
-    "            else:\n",
-    "                self.t.forward(self.length)\n",
-    "\n",
     "\n",
     "    def add_rules(self, *rules):\n",
     "        for key, value in rules:\n",
@@ -244,14 +226,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Время построения: --- 4116 ms ---\n",
+      "Время построения: --- 5632 ms ---\n",
       "+------------------+-----------+\n",
       "| Глубина фрактала | Время, ms |\n",
       "+------------------+-----------+\n",
@@ -276,7 +258,7 @@
     "t = turtle.Turtle()\n",
     "t.ht()\n",
     "pen_width = 1\n",
-    "f_len = 10  #длина одного сегмента прямой\n",
+    "f_len = 5  #длина одного сегмента прямой\n",
     "angle = 60\n",
     "\n",
     "l_sys = LSystem(t, \"F\", pen_width, f_len, angle)\n",
@@ -309,14 +291,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Время построения: --- 2592 ms ---\n",
+      "Время построения: --- 2584 ms ---\n",
       "+------------------+-----------+\n",
       "| Глубина фрактала | Время, ms |\n",
       "+------------------+-----------+\n",
@@ -324,7 +306,7 @@
       "|        1         |     15    |\n",
       "|        2         |    109    |\n",
       "|        3         |    528    |\n",
-      "|        4         |    1600   |\n",
+      "|        4         |    2592   |\n",
       "+------------------+-----------+\n"
      ]
     }
@@ -377,14 +359,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Время построения: --- 11191 ms ---\n",
+      "Время построения: --- 2719 ms ---\n",
       "+------------------+-----------+\n",
       "| Глубина фрактала | Время, ms |\n",
       "+------------------+-----------+\n",
@@ -392,7 +374,7 @@
       "|        1         |    110    |\n",
       "|        2         |    548    |\n",
       "|        3         |    2612   |\n",
-      "|        4         |    2000   |\n",
+      "|        4         |   11191   |\n",
       "+------------------+-----------+\n"
      ]
     }
@@ -413,11 +395,11 @@
     "pen_width = 2  \n",
     "f_len = 5      \n",
     "angle = 90    \n",
-    "axiom = \"0\"\n",
+    "axiom = \"F-XF-F-XF\"\n",
     "\n",
     "l_sys = LSystem(t, axiom, pen_width, f_len, angle)\n",
     "l_sys.add_rules((\"X\", \"XF+F-F+XF-F-XF+F-F+X\"))\n",
-    "l_sys.generate_path(4)                                         #ЗАДАТЬ ГЛУБИНУ РЕКУРСИИ\n",
+    "l_sys.generate_path(3)                                         #ЗАДАТЬ ГЛУБИНУ РЕКУРСИИ\n",
     "start_time = time.time()\n",
     "l_sys.draw_turtle( (0, 0), 0)\n",
     "duration = round((time.time() - start_time) * 1000)\n",
@@ -445,14 +427,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Время построения: --- 1982 ms ---\n"
+      "Время построения: --- 619 ms ---\n"
      ]
     }
    ],
@@ -470,12 +452,13 @@
     "t.ht()          \n",
     "\n",
     "pen_width = 2  \n",
-    "f_len = 5      \n",
+    "f_len = 10\n",
+    "angle = 60\n",
     "axiom = \"FXF++FF++FF\"\n",
     "\n",
     "l_sys = LSystem(t, axiom, pen_width, f_len, angle)\n",
     "l_sys.add_rules((\"F\", \"FF\"), (\"X\", \"++FXF--FXF--FXF++\"))\n",
-    "l_sys.generate_path(4)                                         #ЗАДАТЬ ГЛУБИНУ РЕКУРСИИ\n",
+    "l_sys.generate_path(3)                                         #ЗАДАТЬ ГЛУБИНУ РЕКУРСИИ\n",
     "start_time = time.time()\n",
     "l_sys.draw_turtle( (0, 0), 0)\n",
     "duration = round((time.time() - start_time) * 1000)\n",
@@ -492,14 +475,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Время построения: --- 9653 ms ---\n",
+      "Время построения: --- 924 ms ---\n",
       "+------------------+-----------+\n",
       "| Глубина фрактала | Время, ms |\n",
       "+------------------+-----------+\n",
@@ -560,14 +543,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Overriding\n",
+    "class Lsystem_Pifagor(LSystem):\n",
+    "    def draw_turtle(self, start_pos, start_angle):\n",
+    "        turtle.tracer(1, 0)     \n",
+    "        self.t.up()                 \n",
+    "        self.t.setpos(start_pos)    \n",
+    "        self.t.seth(start_angle)    \n",
+    "        self.t.down()\n",
+    "        stack = list()\n",
+    "        for move in self.state:\n",
+    "            if move == '[':\n",
+    "                stack.append(t.pos())\n",
+    "                stack.append(t.heading())\n",
+    "                self.t.left(self.angle)\n",
+    "            elif move == ']':\n",
+    "                t.up()\n",
+    "                t.setheading(stack.pop())\n",
+    "                t.setpos(stack.pop())\n",
+    "                t.down()\n",
+    "                self.t.right(self.angle)\n",
+    "            else:\n",
+    "                self.t.forward(self.length)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Время построения: --- 175 ms ---\n",
+      "Время построения: --- 681 ms ---\n",
       "+------------------+-----------+\n",
       "| Глубина фрактала | Время, ms |\n",
       "+------------------+-----------+\n",
@@ -598,11 +611,11 @@
     "angle = 45  \n",
     "axiom = \"0\"\n",
     "\n",
-    "l_sys = LSystem(t, axiom, pen_width, f_len, angle)\n",
+    "l_sys = Lsystem_Pifagor(t, axiom, pen_width, f_len, angle)\n",
     "l_sys.add_rules((\"0\", \"1[0]0\"), (\"1\", \"11\"))\n",
-    "l_sys.generate_path(4)                                         #ЗАДАТЬ ГЛУБИНУ РЕКУРСИИ\n",
+    "l_sys.generate_path(6)                                         #ЗАДАТЬ ГЛУБИНУ РЕКУРСИИ\n",
     "start_time = time.time()\n",
-    "l_sys.draw_turtle( (0, 0), 0)\n",
+    "l_sys.draw_turtle( (-500, 0), 0)\n",
     "duration = round((time.time() - start_time) * 1000)\n",
     "turtle.done()\n",
     "print(\"Время построения: \" + \"--- {0} ms ---\".format(duration))\n",
