--- a/labs/Lab6.ipynb
+++ b/labs/Lab6.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
     }
    ],
    "source": [
-    "def __floyd_warshall(adjmat):\n",
+    "def __floyd_warshell(adjmat):\n",
     "    histmat = []\n",
     "    for i in range(len(adjmat)):\n",
     "        histmat.append([])\n",
@@ -175,9 +175,9 @@
     "                    histmat[i][j] = histmat[i][k]\n",
     "    return adjmat, histmat\n",
     "\n",
-    "def floyd_warshall(graph, start, end):\n",
+    "def floyd_warshell(graph, start, end):\n",
     "    adjmat = transform(nx.adjacency_matrix(graph).todense())\n",
-    "    adjmat, histmat = __floyd_warshall(adjmat)\n",
+    "    adjmat, histmat = __floyd_warshell(adjmat)\n",
     "    if histmat[start][end] == -1:\n",
     "        print(f\"Между этими вершинами путь отстутствует\")\n",
     "        draww(graph)\n",
@@ -192,9 +192,9 @@
     "a = int(input('Введите первую вершину:'))\n",
     "b = int(input('Введите вторую вершину:'))\n",
     "start = time.time()\n",
-    "floyd_warshall(graph, a, b)\n",
+    "floyd_warshell(graph, a, b)\n",
     "end = time.time()\n",
-    "floyd_warshall_time = round((end - start)*1000)"
+    "floyd_warshell_time = round((end - start)*1000)"
    ]
   },
   {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -634,31 +634,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 место: Алгоритм Беллмана-Форда - 65 ms\n",
+      "1 место: Алгоритм Дейкстры - 64 ms\n",
       "\n",
-      "2 место: Алгоритм Левита - 65 ms\n",
+      "2 место: Алгоритм Левита - 64 ms\n",
       "\n",
-      "3 место: Алгоритм Флойда-Уоршилла - 65 ms\n",
+      "3 место: Алгоритм Беллмана-Форда - 65 ms\n",
       "\n",
-      "4 место: Алгоритм Дейкстры - 66 ms\n",
+      "4 место: Алгоритм Флойда-Уоршилла - 65 ms\n",
       "\n",
-      "5 место: Алгоритм Джонсона - 66 ms\n",
+      "5 место: Алгоритм Джонсона - 67 ms\n",
       "\n",
-      "В этот топ не вошёл алгоритм Йена, так как его задачой было найти несколько кратчайших путей. В данном случае, на поиск 3 кратчайших путей ушло 839ms\n"
+      "В этот топ не вошёл алгоритм Йена, так как его задачой было найти несколько кратчайших путей. В данном случае, на поиск 3 кратчайших путей ушло 780ms\n"
      ]
     }
    ],
    "source": [
     "sort_list = [[bellman_ford_time, \"Алгоритм Беллмана-Форда\"],\n",
     "             [dijkstra_time, \"Алгоритм Дейкстры\"],\n",
-    "             [floyd_warshall_time, \"Алгоритм Флойда-Уоршилла\"],\n",
+    "             [floyd_warshell_time, \"Алгоритм Флойда-Уоршилла\"],\n",
     "             [johnson_time, \"Алгоритм Джонсона\"],\n",
     "             [levit_time, \"Алгоритм Левита\"]]\n",
     "\n",
@@ -668,6 +668,13 @@
     "    print()\n",
     "print(\"В этот топ не вошёл алгоритм Йена, так как его задачой было найти несколько кратчайших путей. В данном случае, на поиск 3 кратчайших путей ушло \" + str(yen_time) + \"ms\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
