--- a/Kursovaya/Курсовая_работа.ipynb
+++ b/Kursovaya/Курсовая_работа.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -130,9 +130,15 @@
    ],
    "source": [
     "t = int(input('Введите количество наборов:' + '\\t\\t')); print()\n",
+    "while ((t < 1) or (t > 1000)):\n",
+    "    t = int(input('Необходимо ввести целое число от 1 до 1000!'))\n",
     "for j in range (1, t + 1):\n",
     "    n = int(input('Введите длину пути робота ' + str(j) + ' набора:' + '\\t'))\n",
+    "    while ((n < 1) or (n > 2*105)):\n",
+    "        n = int(input('Необходимо ввести целое число от от 1 до 2*105 !'))\n",
     "    s = input('Введите строку ' + str(j) + ' набора:' + '\\t\\t')\n",
+    "    while (len(s) != n):\n",
+    "        s = input('Количество символов должно быть равно длине пути робота!')\n",
     "    x = 0; y = 0\n",
     "    l = 0; r = 10000000\n",
     "    m = {str(x)+str(y):1}\n",
@@ -207,26 +213,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Введите количество наборов:\t2\n",
+      "Введите количество наборов:\t7\n",
+      "\n",
       "Введите 1 набор:\t\t1 3 5\n",
       "Результат:\t\t\t1111110010\n",
+      "\n",
       "Введите 2 набор:\t\t1 1 1\n",
-      "Результат:\t\t\t1100\n"
+      "Результат:\t\t\t1100\n",
+      "\n",
+      "Введите 3 набор:\t\t3 9 3\n",
+      "Результат:\t\t\t1111000010101010\n",
+      "\n",
+      "Введите 4 набор:\t\t0 1 0\n",
+      "Результат:\t\t\t10\n",
+      "\n",
+      "Введите 5 набор:\t\t3 1 2\n",
+      "Результат:\t\t\t1110000\n",
+      "\n",
+      "Введите 6 набор:\t\t0 0 3\n",
+      "Результат:\t\t\t1111\n",
+      "\n",
+      "Введите 7 набор:\t\t2 0 0\n",
+      "Результат:\t\t\t100\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "t = int(input('Введите количество наборов:' + '\\t'))\n",
+    "while ((t < 1) or (t > 1000)):\n",
+    "    print('Необходимо ввести целое число от 1 до 1000!'); print()\n",
+    "    t = int(input('Введите количество наборов:' + '\\t'))\n",
+    "print()\n",
     "for i in range(t):\n",
     "    n0, n1, n2 = input('Введите ' + str(i+1) + ' набор:' + '\\t\\t').split()\n",
     "    n0 = int(n0); n1 = int(n1); n2 = int(n2)\n",
+    "    while (((n0<0)or(n0>100)) or ((n1<0)or(n1>100)) or ((n2<0)or(n2>100))):\n",
+    "        n0, n1, n2 = input('Введите числа от 0 до 100!' + '\\t').split()\n",
+    "        n0 = int(n0); n1 = int(n1); n2 = int(n2)\n",
     "    n = '1'\n",
     "    for j in range(n2):\n",
     "        n += '1'\n",
@@ -237,7 +268,7 @@
     "        n += '10'\n",
     "    if n1 % 2 == 0:\n",
     "        n = n [:-1]\n",
-    "    print('Результат:' + '\\t\\t\\t' + n)    "
+    "    print('Результат:' + '\\t\\t\\t' + n + '\\n')    "
    ]
   },
   {
@@ -302,14 +333,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Введите длины строк s и n соответственно:\t5 2\n",
+      "Введите длины строк s и t соответственно:\t5 2\n",
       "Введите строку s:\t\t\t\taaaaa\n",
       "Введите строку t:\t\t\t\taa\n",
       "Результат:\t\t\t\t\t4\n"
@@ -317,11 +348,20 @@
     }
    ],
    "source": [
-    "n, m = input('Введите длины строк s и n соответственно:' + '\\t').split()\n",
-    "n = int(n);\n",
+    "n, m = input('Введите длины строк s и t соответственно:' + '\\t').split()\n",
+    "n = int(n); m = int(m)\n",
+    "while ((n < 2) or (n > 2*105) or (m < 2) or (m > 2*105) or (m > n)):\n",
+    "    print('Данные введены некорректно!')\n",
+    "    n, m = input('Введите длины строк s и t соответственно:' + '\\t').split()\n",
     "s = input('Введите строку s:' + '\\t\\t\\t\\t')\n",
+    "while(len(s) != n):\n",
+    "    print('Длина строки s должна соответствовать введённой!')\n",
+    "    s = input('Введите строку s:' + '\\t\\t\\t\\t')\n",
     "s += ' '\n",
     "t = input('Введите строку t:' + '\\t\\t\\t\\t')\n",
+    "while(len(t) != m):\n",
+    "    print('Длина строки t должна соответствовать введённой!')\n",
+    "    t= input('Введите строку t:' + '\\t\\t\\t\\t')\n",
     "good = []; no_repeat = []; j = 0\n",
     "for i in range(n):\n",
     "    if (s[i] in no_repeat) and (s[i+1] == s[i]):\n",
@@ -388,13 +428,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Введите количество городов:\t\t\t5\n",
+      "Введите номера городов, соединённых 1 дорогой\t1 2\n",
+      "Введите номера городов, соединённых 2 дорогой\t1 3\n",
+      "Введите номера городов, соединённых 3 дорогой\t3 4\n",
+      "Введите номера городов, соединённых 4 дорогой\t2 5\n",
+      "2.0\n"
+     ]
+    }
+   ],
    "source": [
-    "n = input('Введите количество городов:' + '\\t')\n",
+    "n = int(input('Введите количество городов:' + '\\t\\t\\t'))\n",
+    "while ((n < 1) or (n > 100000)):\n",
+    "    print('Необходимо ввести число от 1 до 100000')\n",
+    "    n = int(input('Введите количество городов:' + '\\t'))\n",
+    "r = [] #roads\n",
     "for i in range (n - 1):\n",
-    "    u, v = input('Введите номера городов, соединённых' + (i + 1) + 'дорогой').split()"
+    "    b = input('Введите номера городов, соединённых ' + str(i + 1) + ' дорогой' + '\\t').split()\n",
+    "    b = [int(item) for item in b]\n",
+    "    while((len(b) != 2) or (b[0] < 1) or (b[0] > n) or (b[1] < 1) or (b[1] > n) or (b[0] == b[1])):\n",
+    "        print('Данные о дороге введены некорректно!')\n",
+    "        b = input('Введите номера городов, соединённых ' + str(i + 1) + ' дорогой' + '\\t').split()\n",
+    "        b = [int(item) for item in b]\n",
+    "    r.append(b)\n",
+    "count = 1; trip = 0; res = []; copy = r; restart = True; exit = False\n",
+    "while ((len(r) != 0) and (restart)):\n",
+    "    restart = False; exit = False\n",
+    "    for i in range(len(r)):\n",
+    "        if ((r[i][0] == count) or (r[i][1] == count)):\n",
+    "            if (r[i][0] > r[i][1]):\n",
+    "                count = r[i][0]\n",
+    "            else:\n",
+    "                count = r[i][1]\n",
+    "            trip += 1\n",
+    "            r.pop(i)\n",
+    "            restart = True\n",
+    "            exit = True\n",
+    "            break\n",
+    "    if (exit):\n",
+    "        continue\n",
+    "    res.append(trip); count = 1; trip = 0; restart = True\n",
+    "res.append(trip)\n",
+    "sum = 0\n",
+    "for i in range (len(res)):\n",
+    "    sum += res[i]\n",
+    "print(sum/len(res))    "
    ]
   },
   {
@@ -477,7 +564,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Введите количество тестовых случаев:\t4\n",
+      "Введите количество тестовых случаев:\t5\n",
+      "\n",
       "Введите размер 1 массива:\t\t5\n",
       "Введите числа в этом массиве:\t\t-1 40 35 -1 35\n",
       "Результат, т.е числа m, k\t\t5 37\n",
@@ -493,18 +581,37 @@
       "Введите размер 4 массива:\t\t7\n",
       "Введите числа в этом массиве:\t\t1 -1 7 5 2 -1 5\n",
       "Результат, т.е числа m, k\t\t3 4\n",
+      "\n",
+      "Введите размер 5 массива:\t\t5\n",
+      "Введите числа в этом массиве:\t\t-1 10 -1 12 -1\n",
+      "Результат, т.е числа m, k\t\t1 11\n",
       "\n"
      ]
     }
    ],
    "source": [
     "t = int(input('Введите количество тестовых случаев:' + '\\t'))\n",
+    "while ((t < 1) or (t > 104)):\n",
+    "    print('Необходимо ввести целое число от 1 до 104!')\n",
+    "    t = int(input('Введите количество тестовых случаев:' + '\\t'))\n",
+    "print()\n",
     "for j in range(t):\n",
     "    n = int(input('Введите размер ' + str(j+1) + ' массива:' + '\\t\\t'))\n",
-    "    a = input('Введите числа в этом массиве:' + '\\t\\t').split()\n",
-    "    a = [int(item) for item in a]\n",
+    "    while ((n < 2) or (n > 105)):\n",
+    "        print ('Размер массива должен быть от 2 до 105')\n",
+    "        n = int(input('Введите размер ' + str(j+1) + ' массива:' + '\\t\\t'))\n",
+    "    check = True\n",
+    "    while(check):\n",
+    "        a = input('Введите числа в этом массиве:' + '\\t\\t').split()\n",
+    "        a = [int(item) for item in a]\n",
+    "        check = False\n",
+    "        for i in range (len(a)):\n",
+    "            if ((a[i] < -1) or (a[i] > 109)):\n",
+    "                print ('Элемент должен находится в промежутке от -1 до 109!')\n",
+    "                check = True\n",
+    "                break\n",
     "    a.insert(0, 1000005)\n",
-    "    Max=0; Min=1000000000; ans=0;\n",
+    "    Max=0; Min=1000000000; res=0;\n",
     "    for i in range(2, n):\n",
     "        if(a[i] == -1):\n",
     "            Max = max(Max,a[i-1]) \n",
@@ -517,9 +624,9 @@
     "            Min = min(Min,a[i+1])  \n",
     "    for i in range(1, n):\n",
     "        if ((a[i]!=-1) and (a[i+1]!=-1)):\n",
-    "            ans = max(ans,abs(a[i+1]-a[i]))\n",
-    "    ans=max(ans,(Max-Min+1)//2)\n",
-    "    print ('Результат, т.е числа m, k' + '\\t\\t' + str(ans) + ' ' + str((Max+Min)//2) + '\\n')"
+    "            res = max(res,abs(a[i+1]-a[i]))\n",
+    "    res=max(res,(Max-Min+1)//2)\n",
+    "    print ('Результат, т.е числа m, k' + '\\t\\t' + str(res) + ' ' + str((Max+Min)//2) + '\\n')"
    ]
   },
   {
@@ -567,24 +674,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Введите количество элементов массива:\t6\n",
-      "Введите числа в этом массиве:\t\t1 2 5 3 4 6\n",
+      "Введите количество элементов массива:\t7\n",
+      "Введите числа в этом массиве:\t\t6 5 4 3 2 4 3\n",
       "\n",
-      "Результат\t\t\t\t4\n"
+      "Результат\t\t\t\t2\n"
      ]
     }
    ],
    "source": [
     "n = int(input('Введите количество элементов массива:' + '\\t'))\n",
-    "a = input('Введите числа в этом массиве:' + '\\t\\t').split()\n",
-    "a = [int(item) for item in a]\n",
+    "while ((n < 2) or (n > 2*105)):\n",
+    "    print('Необходимо ввести число от 2 до 2*105!')\n",
+    "    n = int(input('Введите количество элементов массива:' + '\\t'))\n",
+    "check = True\n",
+    "while(check):\n",
+    "    a = input('Введите числа в этом массиве:' + '\\t\\t').split()\n",
+    "    a = [int(item) for item in a]\n",
+    "    check = False\n",
+    "    for i in range (len(a)):\n",
+    "        if ((a[i] < 1) or (a[i] > 109)):\n",
+    "            print ('Элемент должен находится в промежутке от 1 до 109!')\n",
+    "            check = True\n",
+    "            break\n",
     "max = 1; t = 1; skip = False\n",
     "for i in range(n-1):\n",
     "    if skip:\n",
@@ -660,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -676,8 +794,19 @@
    ],
    "source": [
     "n = int(input('Введите количество элементов массива:' + '\\t'))\n",
-    "a = input('Введите числа в этом массиве:' + '\\t\\t').split()\n",
-    "a = [int(item) for item in a]\n",
+    "while ((n < 2) or (n > 200000)):\n",
+    "    print('Необходимо ввести число от 2 до 200000!')\n",
+    "    n = int(input('Введите количество элементов массива:' + '\\t'))\n",
+    "check = True\n",
+    "while(check):\n",
+    "    a = input('Введите числа в этом массиве:' + '\\t\\t').split()\n",
+    "    a = [int(item) for item in a]\n",
+    "    check = False\n",
+    "    for i in range (len(a)):\n",
+    "        if ((a[i] < -109) or (a[i] > 109) or a[i] == 0):\n",
+    "            print ('Элемент должен находится в промежутке от -109 до 109, за исключением нуля!')\n",
+    "            check = True\n",
+    "            break\n",
     "k = 0;\n",
     "def func(a, j):\n",
     "    global k\n",
@@ -758,8 +887,20 @@
    "source": [
     "n, a, b, k = input('Введите данные по игре' + '\\t\\t\\t\\t\\t').split()\n",
     "n = int(n); a = int(a); b = int(b); k = int(k)\n",
-    "h = input('Введите данные о здоровье монстров:' + '\\t\\t\\t').split()\n",
-    "h = [int(item) for item in h]\n",
+    "while ((n < 1) or (n > 2*105) or (a < 1) or (a > 109) or (b < 1) or (b > 109) or (k < 1) or (k > 109)):\n",
+    "    print('Необходимо ввести данные по следующим правилам: 1≤𝑛≤2⋅105,1≤𝑎,𝑏,𝑘≤109')\n",
+    "    n, a, b, k = input('Введите данные по игре' + '\\t\\t\\t\\t\\t').split()\n",
+    "    n = int(n); a = int(a); b = int(b); k = int(k)\n",
+    "check = True\n",
+    "while(check):\n",
+    "    h = input('Введите данные о здоровье монстров:' + '\\t\\t\\t').split()\n",
+    "    h = [int(item) for item in h]\n",
+    "    check = False\n",
+    "    for i in range (len(h)):\n",
+    "        if ((h[i] < 1) or (h[i] > 109)):\n",
+    "            print ('Элемент должен находится в промежутке от 1 до 109!')\n",
+    "            check = True\n",
+    "            break\n",
     "for i in range(n):\n",
     "    h[i] = ((h[i] - 1) % (a + b)) // a;\n",
     "h.sort()\n",
@@ -852,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -862,40 +1003,54 @@
       "Введите количество наборов:\t4\n",
       "\n",
       "Введите количество спортсменов:\t1\n",
-      "Введите места 1 спортсмена:\t\t50000 1 50000 50000 50000\n",
-      "-1\n",
+      "Введите места 1 спортсмена:\t50000 1 50000 50000 50000\n",
+      "Результат: -1\n",
       "\n",
       "Введите количество спортсменов:\t3\n",
-      "Введите места 1 спортсмена:\t\t10 10 20 30 30\n",
-      "Введите места 2 спортсмена:\t\t20 20 30 10 10\n",
-      "Введите места 3 спортсмена:\t\t30 30 10 20 20\n",
-      "-1\n",
+      "Введите места 1 спортсмена:\t10 10 20 30 30\n",
+      "Введите места 2 спортсмена:\t20 20 30 10 10\n",
+      "Введите места 3 спортсмена:\t30 30 10 20 20\n",
+      "Результат: -1\n",
       "\n",
       "Введите количество спортсменов:\t3\n",
-      "Введите места 1 спортсмена:\t\t1 1 1 1 1\n",
-      "Введите места 2 спортсмена:\t\t2 2 2 2 2\n",
-      "Введите места 3 спортсмена:\t\t3 3 3 3 3\n",
-      "1\n",
+      "Введите места 1 спортсмена:\t1 1 1 1 1\n",
+      "Введите места 2 спортсмена:\t2 2 2 2 2\n",
+      "Введите места 3 спортсмена:\t3 3 3 3 3\n",
+      "Результат: 1\n",
       "\n",
       "Введите количество спортсменов:\t6\n",
-      "Введите места 1 спортсмена:\t\t9 5 3 7 1\n",
-      "Введите места 2 спортсмена:\t\t7 4 1 6 8\n",
-      "Введите места 3 спортсмена:\t\t5 6 7 3 2\n",
-      "Введите места 4 спортсмена:\t\t6 7 8 8 6\n",
-      "Введите места 5 спортсмена:\t\t4 2 2 4 5\n",
-      "Введите места 6 спортсмена:\t\t8 3 6 9 4\n",
-      "5\n"
+      "Введите места 1 спортсмена:\t9 5 3 7 1\n",
+      "Введите места 2 спортсмена:\t7 4 1 6 8\n",
+      "Введите места 3 спортсмена:\t5 6 7 3 2\n",
+      "Введите места 4 спортсмена:\t6 7 8 8 6\n",
+      "Введите места 5 спортсмена:\t4 2 2 4 5\n",
+      "Введите места 6 спортсмена:\t8 3 6 9 4\n",
+      "Результат: 5\n"
      ]
     }
    ],
    "source": [
     "t = int(input('Введите количество наборов:' + '\\t'))\n",
+    "while ((t < 1) or (t > 1000)):\n",
+    "    print('Необходимо ввести целое число от 1 до 1000!')\n",
+    "    t = int(input('Введите количество наборов:' + '\\t'))\n",
     "for l in range(t):\n",
     "    n = int(input('\\n' + 'Введите количество спортсменов:' + '\\t'))\n",
+    "    while ((n < 1) or (n > 50000)):\n",
+    "        print('Необходимо ввести целое число от 1 до 50000!')\n",
+    "        n = int(input('Введите количество спортсменов:' + '\\t'))\n",
     "    a = []\n",
     "    for p in range(n):\n",
-    "        b = input('Введите места ' + str(p+1) + ' спортсмена:' + '\\t\\t').split()\n",
-    "        b = [int(item) for item in b]\n",
+    "        check = True\n",
+    "        while(check):\n",
+    "            b = input('Введите места ' + str(p+1) + ' спортсмена:' + '\\t').split()\n",
+    "            b = [int(item) for item in b]\n",
+    "            check = False\n",
+    "            for i in range (len(b)):\n",
+    "                if ((b[i] < 1) or (b[i] > 50000)):\n",
+    "                    print ('Место должно находится в промежутке от 1 до 50000!')\n",
+    "                    check = True\n",
+    "                    break\n",
     "        a.append(b)\n",
     "        l = [] #Список, содержащий числа, показывающие скольких спортсменов данный спортсмен лучше\n",
     "        m = [0,0]\n",
@@ -915,9 +1070,9 @@
     "            m[1] = k\n",
     "        l.append(k)\n",
     "    if len(set(l)) == 1:\n",
-    "        print(-1)\n",
+    "        print('Результат: ' + str(-1))\n",
     "    else:\n",
-    "        print(m[0]+1)"
+    "        print('Результат: ' + str((m[0]+1)))"
    ]
   },
   {
