--- a/Kursovaya/Курсовая_работа.ipynb
+++ b/Kursovaya/Курсовая_работа.ipynb
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -442,7 +442,7 @@
       "Введите номера городов, соединённых 2 дорогой\t1 3\n",
       "Введите номера городов, соединённых 3 дорогой\t3 4\n",
       "Введите номера городов, соединённых 4 дорогой\t2 5\n",
-      "2.0\n"
+      "Математическое ожидание длины путешествия\t2.0\n"
      ]
     }
    ],
@@ -481,7 +481,7 @@
     "sum = 0\n",
     "for i in range (len(res)):\n",
     "    sum += res[i]\n",
-    "print(sum/len(res))    "
+    "print('Математическое ожидание длины путешествия' + '\\t' + str(sum/len(res)))    "
    ]
   },
   {
